config-root/namespaces/jx-staging/asgharlabs-jenkins-x-golang/asgharlabs-jenkins-x-golang-svc.yaml
# Source: asgharlabs-jenkins-x-golang/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asgharlabs-jenkins-x-golang
  labels:
    chart: "asgharlabs-jenkins-x-golang-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: asgharlabs-jenkins-x-golang-asgharlabs-jenkins-x-golang
