config-root/namespaces/jx-staging/asgharlabs-jenkins-x-golang/asgharlabs-jenkins-x-golang-ingress.yaml
# Source: asgharlabs-jenkins-x-golang/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: asgharlabs-jenkins-x-golang
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: asgharlabs-jenkins-x-golang
              servicePort: 80
      host: asgharlabs-jenkins-x-golang-jx-staging.k8sasgharlabsio-706821-0e3e0ef4c9c6d831e8aa6fe01f33bfc4-0000.us-south.containers.appdomain.cloud
